--- a/public/style/main.css
+++ b/public/style/main.css
@@ -3,8 +3,51 @@
 * {
   text-decoration: none;
   margin: 0px;
+  padding: 0px;
 }
 
+.cont {
+  position: absolute;
+  color: white;
+  width: 100%;
+  height: 100%;
+}
+
+.spinner {
+  animation: rotate 2s linear infinite;
+  z-index: 2;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  margin: -25px 0 0 -25px;
+  width: 100px;
+  height: 100px;
+}
+.spinner .path {
+  stroke: #f700ff;
+  stroke-linecap: round;
+  animation: dash 1.5s ease-in-out infinite;
+}
+
+@keyframes rotate {
+  100% {
+    transform: rotate(360deg);
+  }
+}
+@keyframes dash {
+  0% {
+    stroke-dasharray: 1, 150;
+    stroke-dashoffset: 0;
+  }
+  50% {
+    stroke-dasharray: 90, 150;
+    stroke-dashoffset: -35;
+  }
+  100% {
+    stroke-dasharray: 90, 150;
+    stroke-dashoffset: -124;
+  }
+}
 /*Body*/
 body {
   font-family: "Roboto", sans-serif;
@@ -49,7 +92,7 @@ body {
   box-shadow: 3px 3px 3px #ccd1d1 inset;
 }
 .container__situation--icon {
-  color: #423f3f;
+  color: #979797;
   position: absolute;
   margin-left: -140px;
 }
@@ -169,7 +212,7 @@ body {
 }
 .container__etiq--icon {
   margin-right: 20px;
-  color: #423f3f;
+  color: #979797;
 }
 
 /*Section restaurants*/
@@ -238,7 +281,7 @@ body {
 }
 .container__restaurants--heart {
   font-size: 20px;
-  color: #2b2a2a;
+  color: #979797;
 }
 .container__restaurants--filledheart {
   opacity: 0;
@@ -324,7 +367,7 @@ body {
 .container__menu--heartmenu {
   font-size: 20px;
   opacity: 1;
-  color: #423f3f;
+  color: #979797;
 }
 .container__menu--filledheartmenu {
   opacity: 0;
