--- a/scss/main.scss
+++ b/scss/main.scss
@@ -50,7 +50,56 @@ $breakpoints: (
 {
     text-decoration: none;
     margin: 0px;
+    padding: 0px;
 }
+
+.cont {
+    position: absolute;
+    color: white;
+    width: 100%;
+    height: 100%;
+}
+
+.spinner {
+    animation: rotate 2s linear infinite;
+    z-index: 2;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    margin: -25px 0 0 -25px;
+    width: 100px;
+    height: 100px;
+    
+    & .path {
+      stroke: rgb(247, 0, 255);
+      stroke-linecap: round;
+      animation: dash 1.5s ease-in-out infinite;
+    }
+    
+  }
+  
+  @keyframes rotate {
+    100% {
+      transform: rotate(360deg);
+    }
+  }
+  
+  @keyframes dash {
+    0% {
+      stroke-dasharray: 1, 150;
+      stroke-dashoffset: 0;
+    }
+    50% {
+      stroke-dasharray: 90, 150;
+      stroke-dashoffset: -35;
+    }
+    100% {
+      stroke-dasharray: 90, 150;
+      stroke-dashoffset: -124;
+    }
+  }
+  
+
 
 /*Body*/
 
@@ -105,7 +154,7 @@ body
     box-shadow: 3px 3px 3px #ccd1d1 inset;
 
         &--icon {
-            color: $anthracite;
+            color: #979797;
             position: absolute;
             margin-left: -140px;
         }
@@ -229,7 +278,7 @@ body
 
     &--icon {
         margin-right: 20px;
-        color: $anthracite;
+        color: #979797;
     }
 }
 
@@ -299,7 +348,7 @@ body
 
     &--heart {
         font-size: 20px;
-        color: $ardoise;
+        color: #979797;
     }
 
     &--filledheart {
@@ -402,7 +451,7 @@ body
     &--heartmenu {
         font-size: 20px;
         opacity: 1;
-        color: $anthracite;
+        color: #979797;
     }
 
     &--filledheartmenu {
